testdata/invalid/invalid_union_invalid_message.bop
union U {
    1 -> message unknownField {
        -1 -> whereisthistype x;
    }
}